apache-atlas/istio/base/ingress-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: istio-ingressgateway-atlas
  namespace: istio-system
spec:
  type: ClusterIP
  selector:
    istio: ingressgateway
  ports:
    - name: http-atlas
      port: 23000
      protocol: TCP
      targetPort: 8080
