apache-atlas/istio/base/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: atlas-gateway
  namespace: atlas-system
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 23000
        name: http-atlas
        protocol: HTTP
      hosts:
        - "*"
