apache-atlas/istio/base/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: atlas-virtualservice
  namespace: atlas-system
spec:
  hosts:
    - "*"
  gateways:
    - atlas-gateway
  http:
    - route:
        - destination:
            host: atlas.atlas-system.svc.cluster.local
            port:
              number: 23000
